Fix unsticky footer. Improve visibility/access code for cashier

--- a/src/sass/_access.scss
+++ b/src/sass/_access.scss
@@ -1,6 +1,6 @@
 // default states
 
-#topbar {
+#topbar, .cashier-link {
     display: none;
 }
 
@@ -15,6 +15,7 @@
 
 .client-logged-in.client-is-virtual #topbar,
 .client-not-logged-in .login-container,
-.client-logged-in .account-container {
+.client-logged-in .account-container,
+.client-is-real .cashier-link {
     display: block;
 }
