--- a/src/sass/common.scss
+++ b/src/sass/common.scss
@@ -243,14 +243,6 @@ a.close {
     margin-top: 10px;
     margin-bottom: 10px;
 }
-#page-wrapper {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-}
-#content-holder {
-    flex: 1 1 auto;
-}
 i {
     color: $COLOR_BRAND_ORANGE;
 }
